[project]
name = "AAAAAAA"
version = "0.1.0"
description = "nothing"
authors = [
    {name = "Baha"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
